balls aligned and dropdown online pastille fixed

--- a/srcs/requirements/ft_transcendance/ft_transcendance/assets/src/app/style/LogIn.css
+++ b/srcs/requirements/ft_transcendance/ft_transcendance/assets/src/app/style/LogIn.css
@@ -31,7 +31,7 @@
     margin: 0;
     position: absolute;
     margin-left: 25%;
-    margin-top: 12%;
+    margin-top: 6%;
     width: 40vw;
     height: 40vw;
     max-width: 60vh;
