--- a/srcs/requirements/ft_transcendance/ft_transcendance/assets/src/app/style/SignIn.css
+++ b/srcs/requirements/ft_transcendance/ft_transcendance/assets/src/app/style/SignIn.css
@@ -56,7 +56,7 @@
     align-items: center;
     position: absolute;
     margin-left: 25%;
-    margin-top: 12%;
+    margin-top: 6%;
     width: 40vw;
     height: 40vw;
     max-width: 60vh;
